# SG-Bookkeeper_v2

./: Agent Meta Instruction.md  Code Review - Architectural Refactoring.md  Code Review - Bank Reconciliation.md  Codebase Review and Analysis Report (v17.0)  Manual Testing Plan.md  PRD for Singapore Small Business Bookkeeping Application (v1).md  PRD for Singapore Small Business Bookkeeping Application (v2).md  Project Architecture Document v1.md  Project Architecture Document v2.md  Project Architecture Document v3.md  Project Architecture Document v4.md  Project Architecture Document v5.md  Project Architecture Document v6.md  Project Architecture Document v7.md  Project Architecture Document v8.md  Project Architecture Document.md  Project Current State Assessment and Recommendations.md  Project Description and Goals.md  Project Goals and Objectives Summary.md  Project Overview.md  README (previous).md  README (update).md  README (v14).md  README (v15).md  Technical_Design_Specification_Document (old).md  Technical_Design_Specification_Document (previous).md  Technical_Design_Specification_Document (v14).md  Technical_Design_Specification_Document (v15).md  Technical_Design_Specification_Document.md  changes_to_codebase_corresponding_to_schema_v1.04.md  changes_to_database_schema_and_initial_data_setup.md  code_review_database_changes_in_1.0.7.md  code_review_on_changes_in_codebase_for_multi-currency_support.md  codebase change review v15.md  create_database_user.sql  create_files.sh  currect_project_file_structure.txt  dependencies_install_log.txt  deploy_new_svg.md  deployment_guide.md  (+38 more)
app/: __init__.py  main.py  resources_rc.py
claude/: code_files_1.2.md  code_files_1.2.md.bak  code_files_1.md.bak  code_files_10.md  code_files_100.md  code_files_101.md  code_files_102.md  code_files_103.md  code_files_104.md  code_files_105.md  code_files_106.md  code_files_107.md  code_files_108.md  code_files_109.md  code_files_11.md  code_files_110.md  code_files_111.md  code_files_112.md  code_files_113.md  code_files_114.md  (+456 more)
(+297 files in other folders)
